<?xml version="1.0" encoding="utf-8"?>
<!-- Layout content for the first register page.
     Java code for this is in RegisterPage1.java. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jonathan.cometogetherproject.RegisterPage1"
    tools:showIn="@layout/register_page_1_activity"
    android:gravity="center">

    <!-- Displays the text: "Username:" -->
    <TextView
        android:text="@string/username_view_text"
        android:id="@+id/username_view"
        android:layout_alignBottom="@+id/username_text"
        android:layout_toStartOf="@+id/username_text"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"/>

    <!-- Text box for user to enter their username -->
    <EditText
        android:hint="@string/username_text_hint"
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/password_text"/>

    <!-- Displays the text: "Password:" -->
    <TextView
        android:text="@string/password_view_text"
        android:id="@+id/password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_text"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/username_view"
        android:layout_alignEnd="@+id/email_view"
        android:gravity="center_vertical"/>

    <!-- Text box for user to enter their password -->
    <EditText
        android:hint="@string/password_text_hint"
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/username_text"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/email_text"/>

    <!-- Displays the text: "Email:" -->
    <TextView
        android:text="@string/email_view_text"
        android:id="@+id/email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email_text"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/phone_number_view"
        android:layout_below="@+id/password_view"
        android:gravity="center_vertical"/>

    <!-- Text box for user to enter their email -->
    <EditText
        android:hint="@string/email_text_hint"
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/password_text"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/first_name_text"/>

    <!-- Displays the text: "First Name:" -->
    <TextView
        android:text="@string/first_name_view_text"
        android:id="@+id/first_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_text"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/phone_number_view"
        android:layout_alignBottom="@+id/first_name_text"
        android:gravity="center_vertical"/>

    <!-- Text box for user to enter their first name -->
    <EditText
        android:hint="@string/first_name_text_hint"
        android:id="@+id/first_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/email_text"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/email_view"/>

    <!-- Displays the text: "Last Name:" -->
    <TextView
        android:text="@string/last_name_view_text"
        android:id="@+id/last_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/last_name_text"
        android:layout_below="@+id/first_name_view"
        android:layout_toStartOf="@+id/first_name_text"
        android:gravity="center_vertical"/>

    <!-- Text box for user to enter their last name -->
    <EditText
        android:hint="@string/last_name_text_hint"
        android:id="@+id/last_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/first_name_text"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/first_name_view"/>

    <!-- Displays the text: "Phone Number:" -->
    <TextView
        android:text="@string/phone_number_view_text"
        android:id="@+id/phone_number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_view"
        android:layout_alignBottom="@+id/phone_number_text"
        android:gravity="center_vertical" />

    <!-- Text box for user to enter their phone number -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone_number_text"
        android:hint="@string/phone_number_text_hint"
        android:inputType="phone"
        android:layout_toEndOf="@+id/phone_number_view"
        android:layout_below="@+id/last_name_view"
        android:layout_alignParentEnd="true" />

</RelativeLayout>