<!-- Content of ComeTogetherLogin.java Activity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    app:layout_anchorGravity="center"
    tools:context="com.example.jonathan.cometogetherproject.ComeTogetherLogin"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- Layout for the progress spinner and logo -->
    <RelativeLayout
        android:id="@+id/login_progress_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/ct_logo"/>
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        </ProgressBar>
    </RelativeLayout>

    <!-- Scroll view that contains the login form and logo -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- Layout that contains the login form and logo -->
        <LinearLayout
            android:id="@+id/user_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- ImageView containing the ComeTogether logo -->
            <ImageView
                android:id="@+id/ctLogo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/ct_logo"
                android:contentDescription="@string/ctLogo_image_view_desc"/>

            <!-- Layout containing the username text box -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Layout containing the password text box -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:imeActionId="0"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Button for logging in -->
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:onClick="signIn" />

            <!-- Button for registering a user -->
            <Button
                android:text="@string/action_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_button"
                android:onClick="registerAccount" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
